--- a/nginx_ami.yml
+++ b/nginx_ami.yml
@@ -1,14 +1,16 @@
-- remote_user: ec2-user
+- name: Install Nginx Server
+  hosts: all
+  remote_user: ec2-user
   become: True
   tasks:
-    - name: "Adding Amazon Linux Extras Nginx"
+    - name: Adding Amazon Linux Extras Nginx
       shell: |
         set -o pipefail
         yum update -y
         amazon-linux-extras install nginx1 -y
       args:
         executable: /bin/bash
-    - name: Start Vault Server in Dev Mode
+    - name: Start Nginx Server
       become: true
       become_user: root
       become_method: sudo
